# perimeter-security-io-module

./: .gitignore  README.md
docs/: BOM_ESP32C3_optimized.md  BOM_complete.md  INSTALLATION_GUIDE.md  LINUX_BUILD_GUIDE.md  PC_PROXY_GUIDE.md  PROTOCOL_COMPATIBILITY.md  STATIC_BUILD_GUIDE.md  TESTING_WITHOUT_HARDWARE.md  UBUNTU_INSTALLATION.md  connection_diagrams.md  esp32_gateway_schematic.md  esp32_gateway_schematic_optimized.md  esp32c3_schematic_MP2315_module.md  esp32c3_schematic_final.md  pc_rs485_hardware.md
firmware/esp32_orion_slave/: README.md  platformio.ini
firmware/esp32_orion_slave/lib/OrionSlave/: orion_bus_monitor.cpp  orion_bus_monitor.h  orion_crc.cpp  orion_crc.h  orion_master.cpp  orion_master.h  orion_slave.cpp  orion_slave.h
firmware/esp32_orion_slave/src/: main.cpp
pc/: CMakeLists.txt  README.md
pc/examples/: main.c
pc/include/: orion_commands.h  orion_crc.h  orion_protocol.h  orion_serial.h  orion_sniffer.h
pc/orion_proxy/: CMakeLists.txt  README.md  build-static-linux.sh  package-linux.sh
pc/orion_proxy/include/: device_tracker.h  http_server.h  orion_device_types.h  proxy_config.h  proxy_server.h  tray_icon.h
pc/orion_proxy/src/: device_tracker.c  http_server.c  main.c  orion_device_types.c  proxy_config.c  proxy_server.c  tray_icon.c
pc/orion_proxy/tools/: test_simulator.py
pc/src/: orion_commands.c  orion_crc.c  orion_protocol.c  orion_serial.c  orion_sniffer.c
